small update of button pressed

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         };
 
         const noteUp = (element) => {
-            element.style.aniimation = "synthClicked 1s ease";
+            element.style.animation = "synthClicked 1s ease";
         };
 
         const loadPad = () => {
