added responsive rules for container

--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
                 background-color: #202020;
             }
         }
+
+        @media screen and (max-width: 370px) {
+            #container {
+                width: 80%;
+            }
+        }
         
         * {
             box-sizing: border-box;
