added shortcut helper

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body onload="loadPad()">
     <div id="container"></div>
+
+    <input type="text" />
     
     <script src="Tone.js"></script>
     <script src="main.js"></script>
