--- a/index.html
+++ b/index.html
@@ -23,8 +23,37 @@
                checked>
         <label for="number">Display pad number</label>
     </div>
+
+    <form id="assign"
+          name="setNote"
+          onsubmit="">
+        <input type="text"
+               name="note"
+               placeholder="assign key..." />
+
+        <input type="text"
+               name="newNote"
+               placeholder="assign key..." />
+
+        <button type="submit">submit</button>
+    </form>
     
     <script src="Tone.js"></script>
     <script src="main.js"></script>
+    <script>
+        let noteForm = document.getElementById("assign");
+        const setNote = (note, newNote) => {
+            notes[notes.indexOf(note)] = newNote;
+        };
+
+        noteForm.addEventListener("submit", (event) => {
+            event.preventDefault();
+            setNote(document.setNote.note.value, 
+                    document.setNote.newNote.value);
+
+            loadPad();
+        })
+
+    </script>
 </body>
 </html>
