--- a/index.html
+++ b/index.html
@@ -49,37 +49,9 @@
             onclick="toggleMenu();">
         menu
     </button>
-
-    <button id="option-menu-2"
-            onclick="
-                let noteSeq = ['D4', 'F#4', 'A4', 'D5', 'A4', 'F#4',
-                               'G4', 'D4', 'B3', 'G3', 'B3', 'G3',
-                               'A3', 'C#4', 'E4', 'A4', 'E4', 'C#4',
-                               'D4', 'A3', 'F#3', 'D3'];
-
-                let timeSeq = [250, 250, 250, 250, 500, 500,
-                               200, 250, 250, 250, 500, 500,
-                               200, 250, 250, 250, 500, 500,
-                               200, 250, 250, 250];
-
-                let index = 0;
-                let currentTime = 0;
-
-                function sayMessage() {
-                    noteDown(noteSeq[index]);
-                    index += 1;
-
-                    if (index < noteSeq.length) {
-                        setTimeout(sayMessage, timeSeq[index]);
-                    }
-                }
-                                                
-                setTimeout(sayMessage, 0);
-            ">
-        instant play
-    </button>
     
     <script src="Tone.js"></script>
     <script src="main.js"></script>
+    <!--script src="main2.js"></script-->
 </body>
 </html>
